Docs: Add MELPA badge

--- a/README.org
+++ b/README.org
@@ -3,6 +3,7 @@
 #+PROPERTY: LOGGING nil
 
 #+HTML: <a href="https://alphapapa.github.io/dont-tread-on-emacs/"><img src="images/dont-tread-on-emacs-150.png" align="right"></a>
+#+HTML: <a href="https://melpa.org/#/org-super-agenda"><img src="https://melpa.org/packages/org-super-agenda-badge.svg"></a>
 
 * Introduction
 
