--- a/README.org
+++ b/README.org
@@ -205,6 +205,10 @@ These selectors take one argument alone, or multiple arguments in a list.
 :TOC:      0
 :END:
 
+** 1.1-pre
+
+Nothing new yet!
+
 ** 1.0.1
 
 *Fixes*
