--- a/README.org
+++ b/README.org
@@ -82,7 +82,8 @@ Then put =org-super-agenda.el= in your =load-path=, and eval =(require 'org-supe
 
 1.  Enable ~org-super-agenda-mode~.
 2.  Set the variable ~org-super-agenda-groups~ as desired (see example below). 
-    *Note:* In order for groups to be automatically applied to all agenda buffers, ~org-super-agenda-groups~ must be set in the global scope (e.g. with ~setq~ in your init file, or using the customization interface).  It can also be ~let~-bound in lisp code that calls ~org-agenda~ commands.
+
+    *Note:* In order for groups to be automatically, persistently applied to all agenda buffers, the variable ~org-super-agenda-groups~ /must be set in the global scope/ (e.g. with ~setq~ in your init file, or using the customization interface).  Alternatively, it can be ~let~-bound in lisp code that calls ~org-agenda~ commands, but in that case, the setting /will not persist across agenda commands/ (so after refreshing an agenda buffer by pressing =g=, there will be no groups).
 3.  Run an Org agenda command.
 4.  Start the day with confidence, knowing that nothing important has been lost in the jumble of /ahem/ overdue items.
 
