--- a/examples.org
+++ b/examples.org
@@ -6,18 +6,24 @@ There are a lot of possibilities, so here are some examples to spark your imagin
 
 *Note:* You can test any of these examples by evaluating the whole =let= form in Emacs (or, if you open this file in Emacs, by executing the code block with =C-c C-c=).
 
-** Contents                                                            :TOC:
-    - [[#automatically-by-group][Automatically by group]]
-    - [[#automatically-by-category][Automatically by category]]
-    - [[#forward-looking][Forward-looking]]
-    - [[#log-mode][Log mode]]
-    - [[#concrete-dates][Concrete dates]]
-    - [[#projects][Projects]]
-    - [[#books-to-read][Books to-read]]
-    - [[#emacs-and-org-mode-to-do-items][Emacs and Org-mode to-do items]]
-    - [[#contributed-examples][Contributed examples]]
+** Contents
+:PROPERTIES:
+:TOC:      siblings
+:END:
+    -  [[#automatically-by-group][Automatically by group]]
+    -  [[#automatically-by-category][Automatically by category]]
+    -  [[#forward-looking][Forward-looking]]
+    -  [[#log-mode][Log mode]]
+    -  [[#concrete-dates][Concrete dates]]
+    -  [[#projects][Projects]]
+    -  [[#books-to-read][Books to-read]]
+    -  [[#emacs-and-org-mode-to-do-items][Emacs and Org-mode to-do items]]
+    -  [[#automatically-fold-certain-groups-with-origami][Automatically fold certain groups with Origami]]
+    -  [[#contributed-examples][Contributed examples]]
 
 ** Automatically by group
+:PROPERTIES:
+:END:
 
 By setting the Org property =agenda-group= and using the =:auto-group= selector, you can automatically sort agenda items into groups.  By default, this property is inherited, so you can set it for an entire subtree of items at once.  For example, if you had this Org file:
 
@@ -294,6 +300,9 @@ You could even fold certain groups by default, perhaps like this (this ~use-pack
 #+END_SRC
 
 ** Contributed examples
+:PROPERTIES:
+:TOC:      0
+:END:
 
 *** [[https://github.com/bascht][Sebastian Schulze]]
 
@@ -312,3 +321,7 @@ You could even fold certain groups by default, perhaps like this (this ~use-pack
                   :scheduled future
                   :order 1)))
 #+END_SRC
+
+# Local Variables:
+# before-save-hook: org-make-toc
+# End:
