--- a/README.org
+++ b/README.org
@@ -173,6 +173,11 @@ These selectors take one argument alone, or multiple arguments in a list.
 
 * Changelog
 
+** 1.0.3
+
+*Fixed*
++  Require ~seq~ library.  (Fixes #54.  Thanks to [[https://github.com/cryptorick][Rick Hanson]].)
+
 ** 1.0.2
 
 *Fixed*
@@ -196,6 +201,7 @@ If you find this useful, I'd appreciate if you would share a screenshot or two o
 ** Bugs
 
 + The =org-search-view= agenda command does not seem to set the =todo-state= text property for items it finds, so the =:todo= selector doesn't work with it.  We should be able to work around this by getting the todo state for each item manually, but we have to make sure that we only do that when necessary, otherwise it might be slow.  And I wouldn't be surprised if there are other selectors that don't work with this or other commands, but =org-agenda-list= should work fine, and =org-tags-view= and =org-todo-list= seem to work.
+
 * Credits
 
 +  Thanks to [[https://github.com/balajisivaraman][Balaji Sivaraman]] for contributing the =:category= selector.
