Add: org-super-agenda-header face
Thanks to Christian Schwarzgruber (@cslux).

`org-agenda-structure` face is used for `org-agenda-overriding-heading`, under
some circumstances it might be desired to use a different face for
`org-agenda-overriding-heading` or org-super-agenda headers.

--- a/README.org
+++ b/README.org
@@ -214,6 +214,7 @@ These selectors take one argument alone, or multiple arguments in a list.
 +  Keyword ~:face~, used to apply faces to items in groups.
 +  Keyword ~:transformer~, used to transform items in groups.
 +  Option ~org-super-agenda-header-separator~, which can, e.g. be set to an empty string for a more compact view.  (Thanks to [[https://github.com/sdelafond][Sébastien Delafond]].)
++  Face ~org-super-agenda-header~, which can be used to customize group headers.  (Thanks to [[https://github.com/cslux][Christian Schwarzgruber]].)
 
 ** 1.0.1
 
