--- a/README.org
+++ b/README.org
@@ -216,6 +216,9 @@ These selectors take one argument alone, or multiple arguments in a list.
 +  Option ~org-super-agenda-header-separator~, which can, e.g. be set to an empty string for a more compact view.  (Thanks to [[https://github.com/sdelafond][Sébastien Delafond]].)
 +  Face ~org-super-agenda-header~, which can be used to customize group headers.  (Thanks to [[https://github.com/cslux][Christian Schwarzgruber]].)
 
+*Internal*
++  Refactor auto-groups with macro.
+
 ** 1.0.2
 
 *Fixed*
