Fix: Byte-compiler warnings
Released as 1.0.2.

--- a/README.org
+++ b/README.org
@@ -173,6 +173,11 @@ These selectors take one argument alone, or multiple arguments in a list.
 
 * Changelog
 
+** 1.0.2
+
+*Fixed*
++  Byte-compiler warnings.
+
 ** 1.0.1
 
 *Fixes*
